# 1inch-mcp

./: readme.md  test_wallet.py
frontend/: get_data.py  main.py  pyproject.toml
lab/: fusion+ copy.py  fusion+.py
mcp/: .gitignore  package-lock.json  package.json
mcp/src/: env.ts.sample  index.ts
