[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.16",
    "anthropic>=0.49.0",
    "eth-account>=0.13.6",
    "gradio>=5.23.3",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "web3>=7.10.0",
]
